--- a/css/nomq_preview_master_footeronly.css
+++ b/css/nomq_preview_master_footeronly.css
@@ -1,1 +1,1 @@
-#u56138{-webkit-transform:matrix(0,1,-1,0,55,15);-ms-transform:matrix(0,1,-1,0,55,15);transform:matrix(0,1,-1,0,55,15);}#u56140-4{text-align:right;}
+#u56134{background-color:#00693E;}#u56135{border-width:0px;border-color:transparent;background-color:transparent;}#u56138{background-color:transparent;-webkit-transform:matrix(0,1,-1,0,55,15);-ms-transform:matrix(0,1,-1,0,55,15);transform:matrix(0,1,-1,0,55,15);}#u56136{background-color:transparent;}#u56140-4{background-color:transparent;line-height:17px;text-align:right;font-family:lato, sans-serif;font-weight:500;}
